# Solana-programs

./: .env.example  .gitignore  Anchor.toml  Important_instructions.md  Readme.md  package-lock.json  package.json
programs/MevTipDistribution/: Cargo.toml
programs/MevTipDistribution/src/: lib.rs  state.rs
programs/counter/src/: lib.rs
scripts/: claim.ts  initialize.ts  top-up.ts
tests/: counter.ts  mevtiptester.ts
