[package]
name = "mev_tip_distribution"
version = "0.0.1"
description = "Tip distribution program, responsible for distributing funds to entitled parties."
edition = "2021"
authors = ["Saiteja Pottanigari <saitejapottanigari@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mev_tip_distribution"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
bytemuck_derive = "=1.8.1"
solana-program = "1.18"
solana-security-txt = "1.1.1"